otra caja creada

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
         <h1>Esto es solo un texto</h1>
         <p>Aquí tienes un parrafo</p>
 
-        <div class="box"></div>
+       
+        <div class="box">caja 1</div>
+
+        <div class="box">caja 2 </div>
     </div>
 </body>
 </html>
